--- a/SeSAC16_17Week/Base.lproj/Main.storyboard
+++ b/SeSAC16_17Week/Base.lproj/Main.storyboard
@@ -24,10 +24,10 @@
             </objects>
             <point key="canvasLocation" x="131" y="-28"/>
         </scene>
-        <!--Table View Controller-->
+        <!--Simple Table View Controller-->
         <scene sceneID="ifC-fl-Qd9">
             <objects>
-                <tableViewController id="7bl-oL-6jf" sceneMemberID="viewController">
+                <tableViewController id="7bl-oL-6jf" customClass="SimpleTableViewController" customModule="SeSAC16_17Week" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="y2P-Hi-PEP">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -52,10 +52,10 @@
             </objects>
             <point key="canvasLocation" x="883" y="-28"/>
         </scene>
-        <!--Collection View Controller-->
+        <!--Simple Collection View Controller-->
         <scene sceneID="WaA-NZ-it9">
             <objects>
-                <collectionViewController id="b9L-HK-yTK" sceneMemberID="viewController">
+                <collectionViewController id="b9L-HK-yTK" customClass="SimpleCollectionViewController" customModule="SeSAC16_17Week" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="wjB-Ht-MpS">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -86,10 +86,10 @@
             </objects>
             <point key="canvasLocation" x="1626" y="-28"/>
         </scene>
-        <!--View Controller-->
+        <!--Diffable View Controller-->
         <scene sceneID="aFl-fD-X7j">
             <objects>
-                <viewController id="3lt-Vw-NlQ" sceneMemberID="viewController">
+                <viewController id="3lt-Vw-NlQ" customClass="DiffableViewController" customModule="SeSAC16_17Week" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ifb-uW-vth">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -137,15 +137,19 @@
                             <constraint firstItem="RE3-FS-5cG" firstAttribute="top" secondItem="s9g-p9-2Vg" secondAttribute="bottom" id="svm-MO-c2T"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="collectionView" destination="RE3-FS-5cG" id="Jfa-y0-XSq"/>
+                        <outlet property="searchBar" destination="s9g-p9-2Vg" id="XNJ-26-dxt"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BnF-R0-L9X" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2428" y="-28"/>
         </scene>
-        <!--View Controller-->
+        <!--News View Controller-->
         <scene sceneID="g2u-i7-YJc">
             <objects>
-                <viewController id="Yzn-FR-OS3" sceneMemberID="viewController">
+                <viewController id="Yzn-FR-OS3" customClass="NewsViewController" customModule="SeSAC16_17Week" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="6b6-JW-slY">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -159,14 +163,14 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nVx-99-aFM">
-                                <rect key="frame" x="40" y="137" width="75" height="35"/>
+                                <rect key="frame" x="40" y="137" width="63" height="35"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="reset"/>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z4R-NK-zmo">
-                                <rect key="frame" x="275" y="137" width="75" height="35"/>
+                                <rect key="frame" x="293" y="137" width="57" height="35"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="load"/>
                             </button>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="wrM-26-Vpx">
                                 <rect key="frame" x="0.0" y="172" width="390" height="638"/>
@@ -205,15 +209,21 @@
                             <constraint firstItem="Izm-Ca-hPs" firstAttribute="top" secondItem="f92-Lk-xyH" secondAttribute="top" constant="20" id="viX-5t-J8p"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="collectionView" destination="wrM-26-Vpx" id="Xb0-jA-rv6"/>
+                        <outlet property="loadButton" destination="z4R-NK-zmo" id="B1w-MZ-aUA"/>
+                        <outlet property="numberTextField" destination="Izm-Ca-hPs" id="Fzc-Xq-MPn"/>
+                        <outlet property="resetButton" destination="nVx-99-aFM" id="CMM-QD-nsa"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jxy-uT-5qx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3183" y="-28"/>
         </scene>
-        <!--View Controller-->
+        <!--Rx Cocoa Example View Controller-->
         <scene sceneID="5bi-C3-TtX">
             <objects>
-                <viewController id="gJm-TG-7q7" sceneMemberID="viewController">
+                <viewController id="gJm-TG-7q7" customClass="RxCocoaExampleViewController" customModule="SeSAC16_17Week" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="pB0-LT-LDT">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -239,6 +249,7 @@
                             </switch>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="b0m-sI-fyS">
                                 <rect key="frame" x="20" y="338" width="350" height="50"/>
+                                <color key="backgroundColor" systemColor="systemYellowColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="J0c-hD-yoi"/>
                                 </constraints>
@@ -247,6 +258,7 @@
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ik9-BR-WhC">
                                 <rect key="frame" x="20" y="408" width="350" height="50"/>
+                                <color key="backgroundColor" systemColor="systemYellowColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="aYG-69-KdS"/>
                                 </constraints>
@@ -255,6 +267,7 @@
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yVe-xM-wb8">
                                 <rect key="frame" x="20" y="478" width="350" height="50"/>
+                                <color key="backgroundColor" systemColor="systemYellowColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="EeA-Kg-TMi"/>
                                 </constraints>
@@ -305,15 +318,25 @@
                             <constraint firstItem="rUN-6B-hW4" firstAttribute="trailing" secondItem="HY6-IR-4vc" secondAttribute="trailing" id="r7w-cs-FEn"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="nicknameLabel" destination="drx-ih-Guz" id="7ee-pE-xkN"/>
+                        <outlet property="signButton" destination="yVe-xM-wb8" id="9aW-Ii-43C"/>
+                        <outlet property="signEmail" destination="ik9-BR-WhC" id="9Kl-E0-HHv"/>
+                        <outlet property="signName" destination="b0m-sI-fyS" id="r4o-ez-ysn"/>
+                        <outlet property="simpleLabel" destination="IN2-H2-fx3" id="dti-uQ-zGf"/>
+                        <outlet property="simplePickerView" destination="GLD-5W-CPX" id="0Mp-HF-8ex"/>
+                        <outlet property="simpleSwitch" destination="Nyk-KK-ppW" id="FKn-oa-Lqm"/>
+                        <outlet property="simpleTableView" destination="HY6-IR-4vc" id="P8w-Kj-csE"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="S28-cW-6Ei" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3971" y="-28"/>
         </scene>
-        <!--View Controller-->
+        <!--Subject View Controller-->
         <scene sceneID="7MN-Da-IyL">
             <objects>
-                <viewController id="e7b-9k-su1" sceneMemberID="viewController">
+                <viewController id="e7b-9k-su1" customClass="SubjectViewController" customModule="SeSAC16_17Week" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="IRN-X3-ibf">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -363,6 +386,13 @@
                             <constraint firstItem="uxr-2Z-EgT" firstAttribute="trailing" secondItem="9XK-OV-Srh" secondAttribute="trailing" id="heI-bT-GZQ"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="addButton" destination="8cz-di-5gu" id="boM-Rv-4eh"/>
+                        <outlet property="newButton" destination="JoO-xR-Nq2" id="hpc-vM-ueO"/>
+                        <outlet property="resetButton" destination="zTv-FZ-exM" id="JSz-bI-RNt"/>
+                        <outlet property="searchBar" destination="25h-B3-Tle" id="mRl-H9-udH"/>
+                        <outlet property="tableView" destination="9XK-OV-Srh" id="n1P-Zf-rUG"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Uvm-Gf-Ysb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -372,6 +402,9 @@
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemYellowColor">
+            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
